# personal-assistant-desktop

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: ARCHITECTURE.md  FEATURES.md  documentation-plan.md
docs/_archive/: API_INTEGRATION.md  UI_DESIGN.md
docs/architecture/: api-client.md  backend-lifecycle.md  overview.md
docs/architecture/decisions/: 0001-tauri-over-electron.md  0002-tanstack-query-server-state.md  0003-three-panel-no-routing.md
docs/design-system/: foundations.md  layout.md
docs/features/: cognitive-sessions.md  control-center.md  interest-decay.md  knowledge-graph.md  live-research.md  redesign.md
docs/flows/: manual-research.md
docs/ops/: local-dev.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts  types.ts
src/components/control/: ActivityStream.tsx  ContextInspector.tsx  DaemonBadge.tsx  GlobalCognitiveStats.tsx  ResearchLauncher.tsx
src/components/dashboard/: Dashboard.tsx  DigestPanel.tsx  ResearchPanel.tsx  WorkersPanel.tsx
src/components/eventbus/: EventBusStream.tsx  JobProgressCard.tsx  JobStreamItem.tsx
src/components/interests/: InterestDecayMatrix.tsx  InterestPill.tsx
src/hooks/: useActivity.ts  useDaemonStatus.ts  useDigest.ts  useGraph.ts  useHealth.ts  useInterests.ts  useJobStream.ts  useKnowledge.ts  useMemory.ts  useOpportunities.ts  useSessions.ts  useStats.ts  useWorkers.ts
src/store/: jobsStore.ts  uiStore.ts
(+16 files in other folders)
