[package]
name = "personal-assistant-desktop"
version = "0.1.0"
description = "Desktop client for the Personal Assistant cognitive engine"
edition = "2021"

[lib]
name = "personal_assistant_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "personal-assistant-desktop"
path = "src/main.rs"
